# staging-dt

./: .env  .env.example  .gitignore  README.md
ran-guardian/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile-agent-viz  Dockerfile-data-gen  Dockerfile-events-explorer  Dockerfile-main  README.md  docker-start-data-gen.sh  docker-start-main.sh  docker-start.sh  pyproject.toml
ran-guardian/.streamlit/: config.toml
ran-guardian/app/: .env.example  agent.py  data_manager.py  llm_helper.py  main.py  mock_data.py  models.py  network_manager.py  notification_manager.py  routes.py  services.py
ran-guardian/app/prompts/: assess_event_risk.py  assess_node_risk.py  recommend_network_config.py
ran-guardian/assets/: class_diagram.md  flow_diagram.md
ran-guardian/data/: event_types.json  events_of_interest.json  locations.json
ran-guardian/data_generator/: main.py  mock_data_generator.py  request_example.py  routes.py
ran-guardian/data_generator/examples/: curl_examples.sh  requests_examples.py
ran-guardian/event_scout/: data_manager.py  data_manager_datastore.py  events_explorer_ui.py  firestore_helper.py  gmap_utils.py  model_utils.py  orchestrator.py  run_event_scout.py  set_up.py  st_events_explorer_ui.py  streamlit_events_ui.py  viz_events_st.py
ran-guardian/event_scout/prompts/: __init__.py  aggregate_events.py  dedup.py  deduplicate_events.py  discover.py  verify_event.py
ran-guardian/llm/: README.md  logger.py  prompt_manager.py  reasoning_agent.py  task_agent.py  tools.py  utils.py
ran-guardian/llm/examples/: README.md  sample_workflow.py  simple_usage.py
ran-guardian/llm/prompt_templates/: activate_mlb.prompt  change_dss.prompt  deactivate_ca.prompt  deactivate_pdcch_power_boost.prompt  decrease_power.prompt  enhance_dsplit_threshold.prompt  enhance_resource_allocation.prompt  increase_tilt_value.prompt  main_agent.prompt
ran-guardian/ran_guardian/: data_manager_flat.py  model_utils.py  orchestrator.py  set_up.py
ran-guardian/ran_guardian/prompts/: aggregate_events.py  (+2 more)
ran-guardian/sql_queries/: GeoString to GeoCoordinates.sql
ran-guardian/streamlit_app/: Home.py  st_agent_viz.py
ran-guardian/tests/: docker-start-events-explorer.sh  test_agent.py  test_ran_service.py
(+5 files in other folders)
