[tool.poetry]
name = "ran-guardian"
version = "0.1.0"
description = ""
authors = ["Amit Verma <amiacs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-genai = "^0.5.0"
google-cloud-datastore = "^2.20.2"
googlemaps = "^4.10.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.5"
streamlit = "^1.41.1"
streamlit-calendar = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
